@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-18T16:26:13Z",
-  "count_outdated" : 340,
-  "uniques_outdated" : 206,
+  "timestamp" : "2022-09-20T16:28:04Z",
+  "count_outdated" : 342,
+  "uniques_outdated" : 208,
   "count" : 344,
   "uniques" : 209,
   "clones" : [
-    {
-      "timestamp": "2022-09-06T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-09-18T00:00:00Z",
       "count": 2,
