@@ -1,3 +1,11 @@
+2022-09-20T16:28:04Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3091792957
+* notice: last 14d: unq all: 1 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 206 340 / 209 344
+* notice: next accum: outdated-unq outdated-all / unq all: 208 342 / 209 344
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-06] / []
+
 2022-09-18T16:26:13Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3077834159
 * notice: last 14d: unq all: 3 4
